# single-header-libs

./: CMakeLists.txt  README.MD  call_checked.h
allocators/: arena.c  arena.h  arena_demo.c
collections/: README.MD  call_checked.h  list.h  list_test.c  map.c  map.h  map_test.c  span.h  span_test.c  vector.c  vector.h  vector_test.c
collections.old/common/: macros.h
collections.old/hashtable/: hashtable.h  hashtable_demo.c
collections.old/vector/: vector.h  vector_rpn_demo.c
collections/hashtable/: hashtable.c  hashtable.h  test_hashtable.c
collections/vector/: CMakeLists.txt  test_vector.c  vector.c  vector.h  vector_demo.c
common/: macros.h
dynarray/: dynarray.c  dynarray.h  dynarray_demo.c
hashtable/: hashtable.c  hashtable.h  hashtable_demo.c
logging/: CMakeLists.txt  logging.h  logging_demo.c
strings/: README.MD  repr_cstr.h  repr_string.c  repr_string.h  repr_string_test.c  string_builder.h  string_builder_test.c
testing/: CMakeLists.txt  README.MD  testing.h  testing_demo.c
vector/: vector.c  vector_rpn_demo.c
